added color palettes
