# public/openapi.yaml
@@ -48,6 +48,9 @@ paths:
                         - line
                         - bar
                         - pie
+                    palette: 
+                      type: integer
+                      description: the chart color palette. A number between from 1 to 7. Not required. You can see all available palettes using getPalettes action
       responses:
         '200':
           description: Successfully created the chart.
@@ -65,6 +68,61 @@ paths:
                   image_url:
                     type: string
                     description: The chart image url
+        '400':
+          description: Bad request.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+        '405':
+          description: The request or data sent is not conform.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+        '500':
+          description: Internal server error.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+  /api/graph/palettes:
+    get:
+      operationId: getPalettes
+      summary: Retrieve available chart color palettes. Make sure to render the palettes urls as images in the chat UI
+      responses:
+        '200':
+          description: Successfully retrieved the color palettes.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  palettes:
+                    type: array
+                    description: the different palettes available
+                    items:
+                      type: object
+                      properties:
+                        number:
+                          type: number
+                          description: The identifying number of the palette, to write in the settings object of the createChart action
+                        name:
+                          type: string
+                          description: The name of the palette
+                        url:
+                          type: string
+                          description: the palette image url. Make sure to display it in the Chat UI to help the user decide which palette he wants.
+                        
         '400':
           description: Bad request.
           content:
